style fix: cropping imgs in mugsSection

--- a/Project_CDU/src/assets/scss/App.scss
+++ b/Project_CDU/src/assets/scss/App.scss
@@ -87,6 +87,8 @@
             display: block;
             width: 100%;
             height: 100%;
+            object-fit: cover;
+            object-position: top;
         }
     }
 
